--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,23 +5,31 @@ services:
       image: influxdb
       container_name: influxdb
       ports:
-        - "8083:8083"
         - "8086:8086"
-        - "8090:8090"
-      env_file:
-        - 'env.influxdb'
-      volumes:
+        - "8083:8083"
+        - "2003:2003"
+      volumes: 
+        - INFLUXDB_DB=telegraf 
+        - INFLUXDB_GRAPHITE_ENABLED=true
+        - INFLUXDB_ADMIN_ENABLED=true 
+      #  - INFLUXDB_ADMIN_USER=admin 
+      #  - INFLUXDB_ADMIN_PASSWORD=admin 
+      #  - INFLUXDB_USER=telegraf 
+      #  - INFLUXDB_USER_PASSWORD=password 
+      #env_file:
+      #  - 'env.influxdb'
+      #volumes:
         # Data persistency
         # sudo mkdir -p /influxdb
-        - ./volumes/influxdb:/var/lib/influxdb
+        #- ./volumes/influxdb:/var/lib/influxdb
 
-    telegraf:
-      image: telegraf
-      container_name: telegraf
-      links:
-        - influxdb
-      volumes:
-        - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+    #telegraf:
+    #  image: telegraf
+    #  container_name: telegraf
+    #  links:
+    #    - influxdb
+    #  volumes:
+    #    - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
 
 #If you want to run Telegraf, edit the telegraf.conf to yours needs and:
 # $ docker exec telegraf telegraf
@@ -36,10 +44,10 @@ services:
       user: "0"
       links:
         - influxdb
-      volumes:
+      #volumes:
         # Data persistency
         # sudo mkdir -p /grafana; chown 472:472 /grafana
-        - ./volumes/grafana:/var/lib/grafana
+      #  - ./volumes/grafana:/var/lib/grafana
         
     seq:
       image: datalust/seq
@@ -47,8 +55,8 @@ services:
       ports: 
         - "8084:80"
         - "5341:5341"
-      volumes: 
-        - ./volumes/seq:/data
+      #volumes: 
+      #  - ./volumes/seq:/data
       environment: 
         - ACCEPT_EULA=Y
     consul:
@@ -59,14 +67,16 @@ services:
         - "8600:8600"  
 
     sqlserver:
+      container_name: sqlserver
       image: mcr.microsoft.com/mssql/server
       ports:
         - 1433:1433
       environment:
         - ACCEPT_EULA=Y
-        - SA_PASSWORD=password
+        - SA_PASSWORD=P@ssw0rd!
 
     redis:
-      image: redis:alpine
+      container_name: redis
+      image: redis
       ports:
         - 6379:6379
